# sssom-rosetta

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  README.md  justfile  pyproject.toml  zensical.toml
.agents/: plan.md
.agents/plan/: 2026-07-21-add-snomed-loinc-omop-vocabularies.md  2026-07-21-loinc-snomed-hierarchy-snomed-international.md  2026-07-21-owl-dl-classification-deferral-note.md
.github/: copilot-instructions.md
.github/agents/: linux-support.agent.md  marvin.agent.md  skill-reviewer.agent.md
.github/instructions/: markdown.instructions.md
.github/prompts/: review.prompt.md
.github/scripts/: render_pr_report.py
.github/skills/release-semver-changelog/: SKILL.md
.github/skills/securing-github-actions/: SKILL.md
.github/skills/structuring-python-packages/: SKILL.md
.github/skills/structuring-streamlit-apps/: SKILL.md
.github/skills/writing-adrs/: SKILL.md
.github/skills/writing-epics-stories/: SKILL.md
.github/workflows/: pr-mapping-report.yml  publish-docs.yml
.tara/: library-skills.json  skills.toml
.wingman/: skills.toml
docs/: index.md
docs/mappings/: omop-onz-g.md
docs/ontologies/: omop-cdm.md  onz-g.md
docs/vocabularies/: index.md
mappings/: contributors.csv  omop-onz-g-metadata.json  omop-onz-g.csv
protege/: ontology.properties  ontology.ttl
src/sssom_rosetta/: cli.py
src/sssom_rosetta/mapping/: author.py  docs_pages.py  io.py  report.py  validate.py
src/sssom_rosetta/models/: sssom.py
src/sssom_rosetta/ontology/: catalog.py  loader.py  sources.py
src/sssom_rosetta/vocabulary/: __init__.py  fetch.py  loinc_snomed.py  merge.py  namespaces.py  omop.py  rf2.py  snomed_international.py  sources.py
tests/: test_cli.py
tests/mapping/: test_author.py  test_docs_pages.py  test_first_mapping_set.py  test_io.py  test_report.py  test_validate.py
tests/ontology/: test_catalog.py  test_loader.py  test_sources.py
tests/vocabulary/: test_loinc_snomed.py  test_merge.py  test_omop.py  test_snomed_international.py  test_sources.py
